# baxe

./: Cargo.toml  README.md
.github/workflows/: publish.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  traits.rs  types.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
src/: lib.rs
