[package]
name = "baxe"
version = "0.1.1"
edition = "2021"
description = "A library that simplifies error handling in Axum."
license = "MIT"
repository = "https://github.com/iltumio/baxe"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
axum = "0.7.7"
baxe-derive = { path = "../derive", version = "0.1.0" }
